--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 error-chain = "0.12.4"
 tokio = { version = "1.34", features = ["full"] }
 reqwest = "0.11.23"
-html_parser = "0.7.0"
+scraper = "0.12.0"
 
 [[bin]]
 name = "nasa-download"
