Refactor and add first test

--- a/.github/workflows/rs.yml
+++ b/.github/workflows/rs.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           toolchain: stable
       - run: cargo build --release --all-features
+      - run: cargo test --all-features
 
   clippy:
     runs-on: ubuntu-latest
