--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nasa-download"
+name = "nasa_download"
 version = "0.1.0"
 edition = "2021"
 
@@ -18,5 +18,8 @@ assert_cmd = "2.0.13"
 predicates = "3.1.0"
 
 [[bin]]
-name = "nasa-download"
-path = "src/nasa-download.rs"
+name = "nasa_download"
+path = "src/main.rs"
+
+[features]
+testable_privates = []
